@@ -1,3 +1,12 @@
+2008-12-03  Miguel de Icaza  <miguel@novell.com>
+
+	* Lib/WindowedFile.cs: Implement another file from the original
+	Java implementation.
+
+	* Lib/PackIndex.cs: Fix indentation of comment.
+
+	* Lib/WindowCursor.cs: Implement.
+
 2008-12-02  Miguel de Icaza  <miguel@novell.com>
 
 	* Lib/ByteArrayWindow.cs: Implement the functionality for
